Fixed overflow on our-story and shadows placed better

--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -2,6 +2,3 @@
     font-family: $font1;
     font-weight: 400;
 }
-.main {
-    overflow: hidden;
-}
